--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # Nome da Actions:  
-name: Snake Game
+name: Cobrinha bala na agulha
 
 # Controlador do tempo que sera feito a atualização dos arquivos.
 on:
@@ -23,7 +23,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: Formandodev #Seu usuario
+          github_user_name: dev-nilo #Seu usuario
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
